mediaMicroservices/openshift/networking/istio-gateway/mediamicrosvc-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mediamicrosvc-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mediamicrosvc
spec:
  hosts:
  - "*"
  gateways:
  - mediamicrosvc-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nginx-web-server
        port:
          number: 8080
